--- a/docs/notebooks.layoffs.qmd
+++ b/docs/notebooks.layoffs.qmd
@@ -31,16 +31,11 @@ include-in-header: {text: '<link rel = "icon" href = "data:," />'}
 
 # Layoffs in 2024
 
-2023 and 2024 have been hard for tech. I have scraped the layoff  data from layoffs.fyi using [coupler.io](https://www.coupler.io/).
+2023 and 2024 have been hard for tech. I have scraped the layoff data from layoffs.fyi using [coupler.io](https://www.coupler.io/).
 
-I am currently limited to the first 1,000 rows but I hope that will change once I gain a few
-donors for the project.
+I am currently limited to the first 1,000 rows but I hope that will change once I gain a few donors for the project.
 
-If you know the author of [layoffs.fyi](https://layoffs.fyi) please show them this study.
-
-If we had a live integration with Airtable we could essentially have a live monitor for layoffs in tech globally. A first of it's kind.
-
-I am using the [scicloj](https://scicloj.github.io/) stack for this study.
+If you know the author of [layoffs.fyi](https://layoffs.fyi) please pass them the study. A live integration with Airtable we could essentially have a live monitor for layoffs in tech globally. A first of it's kind.
 
 Without further ado. Here's an analysis of tech layoffs in 2024
 
@@ -66,7 +61,7 @@ Without further ado. Here's an analysis of tech layoffs in 2024
 :::
 
 
-In order to start the study, an overview of the primary dataset is shown below. Here's the first row and headers for the set provided
+What type of information is available? Here's a list of the information currently available on layoffs.fyi
 
 
 ::: {.sourceClojure}
@@ -79,7 +74,7 @@ In order to start the study, an overview of the primary dataset is shown below. 
 ::: {.clay-table}
 
 ```{=html}
-<table class="table table-hover table-responsive"><thead><tr><th>company</th><th>location-hq</th><th>#-laid-off</th><th>date</th><th>%</th><th>industry</th><th>source</th><th>list-of-employees-laid-off</th><th>stage</th><th>$-raised-(mm)</th><th>country</th><th>date-added</th></tr></thead><tbody><tr><td>Salesforce</td><td>SF Bay Area</td><td>300</td><td>2024-07-15</td><td></td><td>Sales</td><td>https://www.bloomberg.com/news/articles/2024-07-15/salesforce-cuts-about-300-jobs-in-latest-sign-of-tech-austerity</td><td></td><td>Post-IPO</td><td>65.0</td><td>United States</td><td>2024-07-15</td></tr></tbody></table>
+<table class="table table-hover table-responsive"><thead><tr><th>company</th><th>location-hq</th><th>#-laid-off</th><th>date</th><th>%</th><th>industry</th><th>source</th><th>list-of-employees-laid-off</th><th>stage</th><th>$-raised-mm</th><th>country</th><th>date-added</th></tr></thead><tbody><tr><td>Salesforce</td><td>SF Bay Area</td><td>300</td><td>2024-07-15</td><td></td><td>Sales</td><td>https://www.bloomberg.com/news/articles/2024-07-15/salesforce-cuts-about-300-jobs-in-latest-sign-of-tech-austerity</td><td></td><td>Post-IPO</td><td>65.0</td><td>United States</td><td>2024-07-15</td></tr></tbody></table>
 ```
 
 :::
@@ -97,10 +92,19 @@ In order to start the study, an overview of the primary dataset is shown below. 
 - Country
 - Date added
 
-There are a lot of angles to look at this from
 
-TODO PUT OVERVIEW HERE
-TODO EXTRACT GROUPINGS TO THEIR OWN FILE
+# Overview
+
+This study is fairly simple. The number of layoffs is going to grouped by other criteria exposed in the dataset such as country, HQ, industry, funding
+
+If the study gains enough traction there's a list of additions worth exploring, such as:
+
+- [ ] Join the dataset by country with a dataset from [IMF](https://www.imf.org/en/Data) to gain access to inflation rate, GDP, overall unemployment, AI readiness, etc.
+- Richer data visualisations using [Hanami](https://github.com/jsa-aerial/hanami)
+- [ ] Live integration with Airtable so the data self-updates and we have a living, breathing monitor of layoffs in tech
+- [ ] Machine learning applications to predict what industry comes next. We'd need a whole bunch of data for this
+- [ ] Join the dataset by a company's lead set of investors
+- [ ] Have a dataset of investors. Perhaps there's an overlap between lead investors, industry & layoff frequency?
 
 
 ## By country
@@ -295,6 +299,37 @@ of remote work too.
 Working from home means a worker is less likely to spend in transportation, the high street or even plain consumer tech.
 
 Finance stands out but it's an industry known for layoffs in mass. It doesn't come across as a surprise. It's a boom and bust industry.
+
+
+## By amount of funding raised
+
+TODO How to take the dataset and add a new column
+where the cell values are a valid range for the amount of funding a company may have
+
+
+::: {.sourceClojure}
+```clojure
+(kind/plotly
+ {:data [{
+          :x    (:$-raised-mm layoffs)
+          :y    (:total-layoffs layoffs)
+          :nbinsx 50
+          :type :bar
+          :marker {:size 4 :colorscale :Viridis}}]
+  :layout {
+           :xaxis {:title "Amount of funding" :type :category}
+           :yaxis {:title "People laid off"}
+           :title "Layoffs by funding"}})
+```
+:::
+
+
+
+```{=html}
+<div style="height:400px;width:100%;"><script>Plotly.newPlot(document.currentScript.parentElement,
+              [{"x":[65.0,18.0,null,2000.0,null,1100.0,1.0,838.0,51.0,335.0,598.0,61.0,17.0,974.0,77.0,105.0,574.0,124.0,1200.0,76.0,null,509.0,1600.0,1300.0,1600.0,769.0,54.0,null,131.0,400.0,216.0,770.0,537.0,1700.0,227.0,396.0,170.0,34.0,83.0,54.0,424.0,54.0,5900.0,9400.0,543.0,39.0,95.0,null,null,1.0,103.0,214.0,72.0,691.0,2000.0,119.0,651.0,117.0,1.0,86.0,26.0,67.0,118.0,32.0,3.0,null,56.0,1700.0,746.0,8300.0,424.0,390.0,643.0,899.0,272.0,null,38.0,null,1300.0,222.0,3400.0,39.0,null,214.0,49.0,3.0,5.0,null,10700.0,26.0,834.0,124.0,null,72.0,null,64.0,79.0,1000.0,516.0,899.0,10700.0,780.0,429.0,932.0,1900.0,601.0,26.0,null,38.0,20200.0,30.0,271.0,26.0,1800.0,5000.0,974.0,6.0,1700.0,130.0,158.0,145.0,3300.0,1400.0,null,299.0,802.0,35.0,180.0,159.0,174.0,400.0,1.0,26.0,10700.0,4100.0,75.0,20200.0,61.0,1200.0,null,336.0,826.0,89.0,32.0,55.0,679.0,12.0,null,49.0,null,24.0,1200.0,179.0,1200.0,247.0,60.0,108.0,null,547.0,214.0,24.0,5500.0,104.0,2.0,109.0,52.0,5.0,230.0,64.0,79.0,288.0,null,3500.0,750.0,355.0,null,50.0,176.0,null,399.0,302.0,16.0,33.0,42.0,480.0,86.0,null,null,44.0,39.0,null,147.0,739.0,26000.0,105.0,1100.0,966.0,569.0,462.0,504.0,390.0,null,177.0,118.0,175.0,1700.0,79.0,2.0,834.0,86.0,71.0,null,null,313.0,676.0,1200.0,3300.0,363.0,null,315.0,522.0,1600.0,1500.0,30.0,696.0,10700.0,8.0,5.0,null,3.0,274.0,1700.0,515.0,962.0,839.0,312.0,118.0,10.0,303.0,2.0,16.0,181.0,2900.0,315.0,2.3,137.0,229.0,15.0,null,37.0,525.0,490.0,20.0,188.0,529.0,247.0,948.0,31.0,400.0,1000.0,565.0,3.0,536.0,108.0,133.0,4900.0,119.0,119.0,361.0,13.0,18.0,4.0,218.0,619.0,899.0,234.0,74.0,10.0,41.0,1200.0,276.0,28.0,451.0,1200.0,885.0,152.0,315.0,26.0,547.0,null,647.0,216.0,150.0,107.0,523.0,117.0,null,657.0,654.0,null,30.0,733.0,263.0,65.0,2400.0,null,1.0,3600.0,299.0,187.0,27.0,56.0,null,332.0,635.0,724.0,275.0,3700.0,811.0,100.0,1300.0,1200.0,1300.0,1500.0,625.0,686.0,2.0,28.0,21.0,534.0,null,426.0,26.0,534.0,155.0,1700.0,108.0,153.0,79.0,11.0,null,183.0,9.0,null,26.0,3.0,500.0,28.0,null,41.0,82.0,216.0,null,null,995.0,320.0,14.0,131.0,274.0,332.0,null,194.0,140.0,null,20.0,26.0,null,280.0,168.0,57.0,108.0,1400.0,3000.0,35.0,229.0,556.0,197.0,2700.0,526.0,14.0,230.0,null,91.0,null,1300.0,12900.0,470.0,263.0,138.0,164.0,5.0,91.0,108.0,485.0,12.0,826.0,899.0,123.0,199.0,356.0,456.0,27200.0,7200.0,632.0,26.0,null,24.0,null,null,12.0,368.0,628.0,1700.0,733.0,52.0,116.0,1500.0,1800.0,null,9900.0,1200.0,133.0,22.0,262.0,15000.0,385.0,1300.0,null,76.0,310.0,25.0,2500.0,97.0,null,234.0,null,241.0,172.0,null,302.0,110.0,694.0,32.0,194.0,247.0,76.0,10700.0,214.0,2200.0,null,120.0,2200.0,35.0,280.0,350.0,477.0,3.0,6.0,2100.0,648.0,185.0,6.0,614.0,null,52.0,700.0,689.0,100.0,90.0,307.0,1300.0,1100.0,414.0,646.0,393.0,9400.0,390.0,597.0,6.0,16.0,214.0,79.0,19.0,228.0,167.0,100.0,null,108.0,null,40.0,null,1700.0,10.0,223.0,455.2,91.0,331.0,347.0,176.0,null,451.0,316.0,null,245.0,347.0,128.0,108.0,3.0,626.0,1100.0,1900.0,7.0,4900.0,108.0,224.0,1300.0,26.0,766.0,97.0,736.0,151.0,640.0,35.0,null,62.0,null,7200.0,427.0,366.0,122.0,200.0,472.0,84.0,null,2400.0,1700.0,106.0,856.0,null,153.0,116.0,1300.0,null,453.0,null,null,391.0,414.0,76.0,365.0,1.0,65.0,null,null,218.0,67.0,218.0,1100.0,32.0,951.0,16.0,705.0,26.0,64.0,38.0,null,9.0,391.0,3300.0,5500.0,154.0,112.0,537.0,229.0,null,153.0,null,61.0,2400.0,null,null,392.0,272.0,86.0,658.0,727.0,79.0,522.0,167.0,null,null,null,39.0,54.0,42.0,86.0,504.0,450.0,516.0,315.0,8.0,null,629.0,577.0,400.0,730.0,916.0,150.0,26000.0,null,152.0,35.0,536.0,50.0,70.0,428.0,127.0,123.0,1700.0,5.0,178.0,6400.0,75.0,426.0,null,4900.0,137.0,458.0,263.0,497.0,170.0,465.0,51.0,857.0,749.0,14.0,390.0,null,5600.0,4.0,489.0,null,10.0,2.0,7.0,438.0,131.0,30.0,1400.0,817.0,456.0,112.0,26.0,301.0,224.0,null,389.0,71.0,296.0,42.0,468.0,180.0,94.0,null,928.0,224.0,1400.0,46.0,107.0,67.0,208.0,125.0,905.0,167.0,31.0,null,238.0,40.0,150.0,90.0,11.0,149.0,187.0,304.0,3.0,null,null,464.0,80.0,3300.0,null,198.0,10.0,14.0,217.0,1.0,14.0,null,2000.0,301.0,4.0,2600.0,103.0,121.0,89.0,4.0,88.0,220.0,192.0,220.0,null,54.0,null,1800.0,247.0,72.0,33.0,154.0,55.0,196.0,157.0,null,null,42.0,77.0,72.0,28.0,30.0,12.0,111.0,315.0,297.0,534.0,5.0,83.0,null,null,null,180.0,50.0,672.0,261.0,null,665.0,770.0,1200.0,2.0,925.0,419.0,null,40.0,748.0,89.0,375.0,82.0,1100.0,75.0,26.0,null,38.0,107.0,null,234.0,300.0,3.0,995.0,5.0,88.0,43.0,null,513.0,435.0,567.0,274.0,148.0,105.0,65.0,42.0,12.0,2.0,135.0,159.0,19.0,3.0,110.0,574.0,389.0,57.0,17.0,1200.0,387.0,489.0,89.0,12.0,149.0,200.0,188.0,46.0,188.0,187.0,39.0,1600.0,149.0,9.0,569.0,11.0,463.0,103.0,1500.0,351.0,516.0,17.0,9.0,322.0,192.0,692.0,37.0,182.0,255.0,1.0,null,null,382.0,null,87.0,null,111.0,179.0,32.0,422.0,1.0,165.0,91.0,316.0,137.0,39.0,null,56.0,null,33.0,659.0,17.0,108.0,91.0,154.0,2700.0,256.0,null,220.0,1900.0,282.0,138.0,212.0,null,79.0,null,20.0,118.0,1100.0,99.0,357.0,3300.0,363.0,409.0,53.0,274.0,313.0,530.0,17.0,131.0,504.0,17.0,171.0,342.0,567.0,null,290.0,12.0,35.0,null,1400.0,711.0,null,156.0,50.0,160.0,106.0,90.0,47.0,null,8.0,896.0,24.0,null,607.0,704.0,770.0,216.0,100.0,138.0,null,65.0,null,445.0,19.0,8700.0,18.0,537.0,1.0,169.0,81.0,414.0,1.0,612.0,214.0,181.0,85.0,null,625.0,263.0,1100.0,67.0,null,5600.0,1100.0,38.0,197.0,141.0,300.0,25200.0,148.0,134.0,306.0,28.0,69.0,16500.0,null,686.0,13.0,88.0,2.0,80.0,24.0,3300.0,null,116.0,4.0,194.0,51.0,null,null,null,17.0,84.0,455.2,340.0,184.0,111.0,50.0,900.0,119.0,468.0,284.0,529.0,469.0,227.0,4.0,253.0,null,40.0,1100.0,288.0,229.0,891.0,644.0,805.0,484.0,7.0,5500.0,4100.0,340.0,324.0,905.0,349.0,233.0,null,462.0,1300.0,165.0,364.0,1300.0,23.0,null,2100.0,19.0,310.0,274.0,7.0,307.0],"y":null,"nbinsx":50,"type":"bar","marker":{"size":4,"colorscale":"Viridis"}}], {"xaxis":{"title":"Amount of funding","type":"category"},"yaxis":{"title":"People laid off"},"title":"Layoffs by funding"}, {});</script></div>
+```
+
 
 
 ```{=html}
